@@ -6,7 +6,7 @@ CREATE TABLE `Instance_Settings` (
 
 INSERT INTO `Instance_Settings` (`IS_ID`, `IS_Name`, `IS_Description`) VALUES (
     1, "Instance IP", "The connection string containers can reach this instance of LXDMosaic's node server to phone home when they are part of a deployment"
-    2, "Record Actions", "Certian actions will be recorded, 0 for disabled, 1 for enabled"
+    2, "Record Actions", "47 different actions will be recorded! 0 for disabled & 1 for enabled"
 );
 
 CREATE TABLE `Instance_Settings_Values` (
