@@ -2,14 +2,14 @@
 <div id="cloudConfigOverview" class="row">
     <div class="col-md-9">
           <div class="card">
-            <div class="card-header bg-info" role="tab" id="headingOne">
+            <div class="card-header bg-info" role="tab" >
               <h5>
                 <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#cloudConfigDescription" aria-expanded="true" aria-controls="cloudConfigDescription">
                   Cloud Config
                 </a>
               </h5>
             </div>
-            <div id="cloudConfigDescription" class="collapse in show" role="tabpanel" aria-labelledby="headingOne">
+            <div id="cloudConfigDescription" class="collapse in show" role="tabpanel" >
               <div class="card-block bg-dark">
                   Cloud config files are scripts or controllers that run when
                   a container is first created to set it up for a particular task.
@@ -19,14 +19,14 @@
     </div>
     <div class="col-md-3">
           <div class="card">
-            <div class="card-header bg-info" role="tab" id="headingOne">
+            <div class="card-header bg-info" role="tab" >
               <h5>
                 <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Actions
                 </a>
               </h5>
             </div>
-            <div id="collapseOne" class="collapse in show" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="collapse in show" role="tabpanel" >
               <div class="card-block bg-dark">
                   <button class="btn btn-block btn-primary" id="createCloudConfig">
                       Create
@@ -39,7 +39,7 @@
 <div class="row" id="cloudConfigContents">
     <div class="col-md-9">
         <div class="card">
-          <div class="card-header bg-info" role="tab" id="headingOne">
+          <div class="card-header bg-info" role="tab" >
             <h5>
               <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 Image
@@ -47,7 +47,7 @@
               </a>
             </h5>
           </div>
-          <div id="collapseOne" class="collapse in show" role="tabpanel" aria-labelledby="headingOne">
+          <div id="collapseOne" class="collapse in show" role="tabpanel" >
             <div class="card-body bg-dark">
                 <input class="form-control" id="cloudConfigImage"/>
             </div>
@@ -71,14 +71,14 @@
     </div>
     <div class="col-md-3">
           <div class="card">
-            <div class="card-header bg-info" role="tab" id="headingOne">
+            <div class="card-header bg-info" role="tab" >
               <h5>
                 <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Actions
                 </a>
               </h5>
             </div>
-            <div class="bg-dark" id="collapseOne" class="collapse in show" role="tabpanel" aria-labelledby="headingOne">
+            <div class="bg-dark" id="collapseOne" class="collapse in show" role="tabpanel" >
               <div class="card-block">
                   <button class="btn btn-block btn-success save">
                       Save
