@@ -13,14 +13,14 @@
         </div>
         <div class="col-md-3">
               <div class="card">
-                <div class="card-header bg-info" role="tab" id="headingOne">
+                <div class="card-header bg-info" role="tab" >
                   <h5>
                     <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                       Actions
                     </a>
                   </h5>
                 </div>
-                <div id="collapseOne" class="collapse in show" role="tabpanel" aria-labelledby="headingOne">
+                <div id="collapseOne" class="collapse in show" role="tabpanel" >
                   <div class="card-block bg-dark">
                       <button class="btn btn-block btn-primary" id="createNetwork">
                           Create
