@@ -20,6 +20,7 @@ Added
     Phone home tracking for containers in a deployment
     A page to manage instance settings
     Upgrading guide (#124)
+    Recored actions (#127)
 
 0.4.0
 
